# cookiecutter-cpp

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: CMakeLists.txt
{{cookiecutter.project_slug}}/src/: CMakeLists.txt
